--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <h1>
         Madison Moore
     </h1>
+    <p>Civil Engineering * Web Development</p>
+    <img src="https://media.giphy.com/media/TwiwnEyeKIjeg/giphy.gif" alt="Construction">
 </body>
 </html>
